--- a/app/src/main/res/layout/week_layout.xml
+++ b/app/src/main/res/layout/week_layout.xml
@@ -90,8 +90,8 @@
                 android:layout_height="45dp"
                 android:orientation="horizontal"
                 android:background="@drawable/ic_hexnow"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
                 >
@@ -123,7 +123,7 @@
                     android:layout_height="30dp"
                     android:src="@drawable/img"
                     android:id="@+id/flag1"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginStart="5dp"
                     />
                 <TextView
 
@@ -217,8 +217,8 @@
                 android:layout_height="45dp"
                 android:orientation="horizontal"
                 android:background="@drawable/ic_hexnow"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:gravity="center"
                 >
 
@@ -349,8 +349,8 @@
                 android:layout_height="45dp"
                 android:orientation="horizontal"
                 android:background="@drawable/ic_hexnow"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginBottom="20dp"
                 android:gravity="center"
                 >
