--- a/app/src/main/res/layout/single_tv.xml
+++ b/app/src/main/res/layout/single_tv.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:textStyle="bold"
-    android:textColor="@color/white"
-
     android:padding="5dp"
-    >
+    android:textColor="@color/white"
+    android:textStyle="bold">
 
 </TextView>
