--- a/app/src/main/res/layout-h480dp/leader_score_item.xml
+++ b/app/src/main/res/layout-h480dp/leader_score_item.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:text="1"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:textStyle="bold"
             android:textSize="18sp"
             android:fontFamily="@font/fjalla_one"
@@ -31,7 +31,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
         android:background="@drawable/whitepolygon"
         >
 
@@ -45,7 +45,7 @@
                 android:id="@+id/player_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_marginStart="40dp"
                 android:fontFamily="@font/montserrat"
                 android:text="Player12345"
                 android:textColor="@color/black"
@@ -55,7 +55,7 @@
                 android:id="@+id/highscore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_marginStart="40dp"
                 android:text="Highscore: 123"
                 android:textColor="@color/basic_color"
                 android:textSize="13sp" />
@@ -63,14 +63,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:orientation="vertical"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginTop="20dp"
             >
 
             <ImageView
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:layout_width="40dp"
                 android:layout_height="30dp"
                 android:id="@+id/flag_img"
