--- a/app/src/main/res/layout-h720dp/leader_score_item.xml
+++ b/app/src/main/res/layout-h720dp/leader_score_item.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:fontFamily="@font/fjalla_one"
             android:text="1"
             android:textColor="@color/white"
@@ -31,11 +31,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginLeft="50dp"
+        android:layout_marginStart="50dp"
         android:background="@drawable/whitepolygon">
 
         <LinearLayout
-            android:id="@+id/left_layout"
+            android:id="@+id/Start_layout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -45,17 +45,17 @@
                 android:id="@+id/player_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_marginStart="40dp"
                 android:fontFamily="@font/montserrat"
                 android:text="Player12345"
                 android:textColor="@color/black"
-                android:textSize="20dp" />
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/highscore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="40dp"
+                android:layout_marginStart="40dp"
                 android:text="Highscore: 123"
                 android:textColor="@color/basic_color"
                 android:textSize="13sp" />
@@ -64,14 +64,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
 
             android:layout_marginTop="20dp"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             android:orientation="vertical">
 
             <ImageView
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:id="@+id/flag_img"
                 android:layout_width="40dp"
                 android:layout_height="30dp"
@@ -84,7 +84,7 @@
                 android:text="Nigeria"
 
                 android:textColor="@color/black"
-                android:textSize="12dp" />
+                android:textSize="12sp" />
 
 
         </LinearLayout>
