--- a/app/src/main/res/layout-h720dp/languages_dialog.xml
+++ b/app/src/main/res/layout-h720dp/languages_dialog.xml
@@ -65,6 +65,37 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/chinese_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/china" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/chinese"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/english_language"
                 android:layout_width="291dp"
                 android:layout_height="50dp"
@@ -207,7 +238,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="70dp"
                     android:contentDescription="@string/app_name"
-                    android:src="@drawable/indonesian" />
+                    android:src="@drawable/indonesia" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -247,6 +278,68 @@
                     android:layout_marginStart="10dp"
                     android:fontFamily="@font/arimo"
                     android:text="@string/japanese"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/korean_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/korea" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/korean"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/malay_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/malaysia" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/malay"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
@@ -317,6 +410,37 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/thai_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/thailand" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/thai"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/turkish_language"
                 android:layout_width="291dp"
                 android:layout_height="50dp"
@@ -374,6 +498,37 @@
                     android:layout_marginStart="10dp"
                     android:fontFamily="@font/arimo"
                     android:text="@string/urdu"
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/vietnamese_language"
+                android:layout_width="291dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="60dp"
+                android:background="@drawable/ic_hexnow"
+                android:backgroundTint="@color/purple_500"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/vietnam" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="10dp"
+                    android:fontFamily="@font/arimo"
+                    android:text="@string/vietnamese"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
 
