--- a/app/src/main/res/layout-h300dp/activity_play_details.xml
+++ b/app/src/main/res/layout-h300dp/activity_play_details.xml
@@ -409,14 +409,12 @@
 
     </LinearLayout>
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
+    <LinearLayout
+        android:id="@+id/adview_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="0dp"
-        ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_ad_unit">
+        android:layout_marginTop="1dp"
+        android:orientation="vertical" />
 
-    </com.google.android.gms.ads.AdView>
 </RelativeLayout>
