--- a/app/src/main/res/layout-h600dp/activity_game3.xml
+++ b/app/src/main/res/layout-h600dp/activity_game3.xml
@@ -622,12 +622,12 @@
 
     </androidx.core.widget.NestedScrollView>
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_ad_unit" />
+        android:id="@+id/adview_container"
+        android:orientation="vertical"
+        android:layout_marginTop="1dp"/>
 
 </RelativeLayout>
