--- a/app/src/main/res/layout-h480dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h480dp/activity_dashboard.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/rootview"
     tools:context=".Dashboard">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -19,63 +19,65 @@
             android:layout_height="0dp"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:gravity="center"
             android:layout_weight="1"
-            >
+            android:gravity="center">
+
             <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
                 android:layout_centerVertical="true"
-                >
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
+
                 <RelativeLayout
                     android:id="@+id/profile"
-                    android:elevation="1dp"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:elevation="1dp">
 
                     <ImageView
                         android:layout_width="53dp"
                         android:layout_height="45dp"
-                        android:src="@drawable/hexagon"
-                        android:rotation="90"
                         android:layout_centerVertical="true"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        app:tint="@color/basic_color"/>
+                        android:rotation="90"
+                        android:src="@drawable/hexagon"
+                        app:tint="@color/basic_color" />
+
                     <ImageView
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_centerInParent="true"
-                        android:src="@drawable/ic_baseline_person_outline_24"/>
+                        android:src="@drawable/ic_baseline_person_outline_24" />
                 </RelativeLayout>
 
             </RelativeLayout>
+
             <LinearLayout
                 android:id="@+id/account"
                 android:layout_width="120dp"
                 android:layout_height="30dp"
-                android:layout_marginStart="16dp"
-                android:orientation="horizontal"
-                android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="16dp"
+                android:background="@drawable/ic_hexnow"
                 android:backgroundTint="@color/basic_color"
-                android:background="@drawable/ic_hexnow">
+                android:orientation="horizontal">
 
 
                 <TextView
                     android:id="@+id/highscore"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="70dp"
+                    android:fontFamily="@font/montserrat"
                     android:text=""
                     android:textColor="@color/white"
                     android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="70dp"
 
-                    android:fontFamily="@font/montserrat"/>
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
@@ -85,20 +87,22 @@
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:orientation="vertical">
+
                 <ImageView
                     android:layout_width="53dp"
                     android:layout_height="45dp"
-                    android:src="@drawable/hexagon"
-                    android:rotation="90"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"
-                    app:tint="@color/basic_color"/>
+                    android:rotation="90"
+                    android:src="@drawable/hexagon"
+                    app:tint="@color/basic_color" />
+
                 <ImageView
                     android:id="@+id/settings"
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/ic_baseline_settings_24"/>
+                    android:src="@drawable/ic_baseline_settings_24" />
             </RelativeLayout>
         </RelativeLayout>
 
@@ -107,57 +111,57 @@
             android:layout_height="0dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="-60dp"
-            android:layout_weight="2"
-            >
+            android:layout_weight="2">
+
             <ImageView
                 android:id="@+id/rays"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                app:tint="@color/white"
                 android:alpha="0.05"
-                android:src="@drawable/ic_rays" />
+                android:src="@drawable/ic_rays"
+                app:tint="@color/white" />
 
             <ImageView
+                android:id="@+id/gameLogoImageView"
                 android:layout_width="150dp"
                 android:layout_height="100dp"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center"
-                android:id="@+id/gameLogoImageView"
                 android:background="@drawable/game_logo"
                 android:scaleType="centerCrop" />
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
             android:layout_marginTop="-40dp"
-            android:layout_weight="1.2"
-            >
+            android:layout_marginEnd="20dp"
+            android:layout_weight="1.2">
+
             <RelativeLayout
+                android:id="@+id/btn_forAnim"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/btn_forAnim"
-                android:layout_marginTop="35dp"
-                android:layout_marginBottom="35dp"
                 android:layout_marginStart="30dp"
+                android:layout_marginTop="35dp"
                 android:layout_marginEnd="30dp"
-                android:background="@drawable/playbtn_bg"
-                >
+                android:layout_marginBottom="35dp"
+                android:background="@drawable/playbtn_bg">
 
             </RelativeLayout>
 
             <RelativeLayout
+                android:id="@+id/new_game"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/new_game"
-                android:layout_marginTop="35dp"
-                android:layout_marginBottom="35dp"
                 android:layout_marginStart="30dp"
+                android:layout_marginTop="35dp"
                 android:layout_marginEnd="30dp"
-                android:background="@drawable/playbtn_bg"
-                >
+                android:layout_marginBottom="35dp"
+                android:background="@drawable/playbtn_bg">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -167,16 +171,16 @@
                     <ImageView
                         android:layout_width="50dp"
                         android:layout_height="50dp"
-                        android:src="@drawable/ic_sports_esports_black_48dp"
-                        app:tint="@color/white"
-                        android:layout_marginStart="10dp"
                         android:layout_gravity="center_vertical"
-                        />
+                        android:layout_marginStart="10dp"
+                        android:src="@drawable/ic_sports_esports_black_48dp"
+                        app:tint="@color/white" />
+
                     <RelativeLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        >
+                        android:layout_gravity="center_vertical">
+
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -188,14 +192,13 @@
                                 android:id="@+id/play_text1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/play"
-                                android:textStyle="bold"
-                                android:textSize="18sp"
+                                android:layout_centerInParent="true"
                                 android:elevation="5dp"
                                 android:shadowColor="@color/black"
-                                android:layout_centerInParent="true"
+                                android:text="@string/play"
                                 android:textColor="@color/black"
-                                />
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
 
                         </LinearLayout>
 
@@ -233,141 +236,133 @@
                 </LinearLayout>
             </RelativeLayout>
         </RelativeLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
-            >
+            android:layout_marginEnd="25dp">
 
             <RelativeLayout
                 android:id="@+id/leaderboard"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:padding="10dp"
                 android:background="@drawable/ic_hexnow"
-                >
+                android:padding="10dp">
 
                 <ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:src="@drawable/ic_leaderboard_black_48dp"
-                    app:tint="@color/white"
-                    android:alpha="0.8"
                     android:layout_centerVertical="true"
                     android:layout_marginStart="10dp"
-                    />
+                    android:alpha="0.8"
+                    android:src="@drawable/ic_leaderboard_black_48dp"
+                    app:tint="@color/white" />
+
                 <TextView
                     android:id="@+id/leaderboard_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/leaderboard"
-                    android:textStyle="bold"
-                    android:textSize="20sp"
                     android:layout_centerInParent="true"
+                    android:text="@string/leaderboard"
                     android:textColor="@color/white"
-                    />
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
             </RelativeLayout>
 
 
             <RelativeLayout
-                android:visibility="gone"
                 android:id="@+id/new_particle"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:background="@drawable/ic_hexnow"
                 android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="25dp"
+                android:background="@drawable/ic_hexnow"
                 android:padding="10dp"
-                >
-
+                android:visibility="gone">
 
 
                 <TextView
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="new Particl"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
                     android:layout_centerInParent="true"
+                    android:text="new Particl"
                     android:textColor="@color/white"
-                    />
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
 
             </RelativeLayout>
+
             <RelativeLayout
                 android:id="@+id/new_particle2"
                 android:layout_width="match_parent"
                 android:layout_height="80dp"
-                android:background="@drawable/ic_hexnow"
                 android:layout_marginStart="25dp"
-                android:layout_marginEnd="25dp"
                 android:layout_marginTop="10dp"
-                android:padding="10dp"
-                >
-
+                android:layout_marginEnd="25dp"
+                android:background="@drawable/ic_hexnow"
+                android:padding="10dp">
 
 
                 <TextView
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="new Particl"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
                     android:layout_centerInParent="true"
+                    android:text="new Particl"
                     android:textColor="@color/white"
-                    />
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
 
             </RelativeLayout>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="50dp"
-                android:background="@drawable/whitepolygon"
-                >
+                android:background="@drawable/whitepolygon">
+
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
                     android:layout_centerVertical="true"
-                    >
+                    android:orientation="vertical">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/leaderboard"
-                        android:textStyle="bold"
-                        android:textSize="16dp"
                         android:layout_marginStart="40dp"
+                        android:text="@string/leaderboard"
                         android:textColor="@color/black"
-                        />
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+
                     <TextView
                         android:id="@+id/see_rank_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/see_your_ranking"
-                        android:textSize="13sp"
                         android:layout_marginStart="40dp"
+                        android:text="@string/see_your_ranking"
                         android:textColor="@color/basic_color"
-                        />
+                        android:textSize="13sp" />
                 </LinearLayout>
             </RelativeLayout>
 
         </RelativeLayout>
+
         <RelativeLayout
             android:id="@+id/more_games"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/ic_hexnow"
             android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
             android:layout_marginTop="10dp"
-            android:padding="10dp"
-            >
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/ic_hexnow"
+            android:padding="10dp">
 
 
             <TextView
@@ -387,36 +382,31 @@
             android:id="@+id/goto_youtube"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="@drawable/ic_hexnow"
             android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
             android:layout_marginTop="10dp"
-            android:padding="10dp"
-            >
-
+            android:layout_marginEnd="25dp"
+            android:background="@drawable/ic_hexnow"
+            android:padding="10dp">
 
 
             <TextView
                 android:id="@+id/goto_youtube_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/goto_youtube"
-                android:textStyle="bold"
-                android:textSize="20dp"
                 android:layout_centerInParent="true"
+                android:text="@string/goto_youtube"
                 android:textColor="@color/white"
-                />
+                android:textSize="20dp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
+
+    <LinearLayout
+        android:id="@+id/adview_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ads:adSize="FULL_BANNER"
         android:layout_alignParentBottom="true"
-        ads:adUnitId="@string/banner_ad_unit">
-    </com.google.android.gms.ads.AdView>
-
+        android:layout_marginTop="1dp"
+        android:orientation="vertical" />
 
 </RelativeLayout>
