--- a/app/src/main/res/layout-h600dp/activity_dashboard.xml
+++ b/app/src/main/res/layout-h600dp/activity_dashboard.xml
@@ -373,13 +373,12 @@
 
     </LinearLayout>
 
-    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/adView"
+    <LinearLayout
+        android:id="@+id/adview_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        ads:adSize="FULL_BANNER"
-        ads:adUnitId="@string/banner_ad_unit"></com.google.android.gms.ads.AdView>
-
+        android:layout_marginTop="1dp"
+        android:orientation="vertical" />
 
 </RelativeLayout>
